--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,15 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# Create a cluster with the default configurations \n",
+    "dockerami = 'TODO'\n",
     "response = emr.run_job_flow(\n",
     "\n",
-    "    Name='virtual_enviroment_aws_linux',\n",
+    "    Name='docker_spark_aws_linux',\n",
     "    LogUri='s3://commoncrawl-logs/',\n",
     "    ReleaseLabel='emr-6.9.0',\n",
     "    Instances={\n",
@@ -132,6 +133,15 @@
     "                'InstanceRole': 'MASTER',\n",
     "                'InstanceType': 'm4.xlarge',\n",
     "                'InstanceCount': 1,\n",
+    "                # 'Configurations': [\n",
+    "                #     {\n",
+    "                #         'Classification': 'docker',\n",
+    "                #         'Properties': {\n",
+    "                #             'docker.trusted.registries': f'local,centos,{dockerami}',\n",
+    "                #             \"docker.privileged-containers.registries\": f\"local,centos,{dockerami}\"\n",
+    "                #         }\n",
+    "                #     }\n",
+    "                #],\n",
     "                'EbsConfiguration': {\n",
     "                    'EbsBlockDeviceConfigs': [\n",
     "                        {\n",
@@ -163,16 +173,50 @@
     "            'Name': 'Spark'\n",
     "        },\n",
     "    ]        \n",
-    "# ,BootstrapActions=[ \n",
-    "#         {\n",
-    "#             'Name': 'Packages setup',\n",
-    "#             'ScriptBootstrapAction':\n",
-    "#                 {\n",
-    "#                 'Path': jp.get_bootstrap(params.job)\n",
-    "#                 }\n",
-    "#         }]\n",
+    ",BootstrapActions=[ \n",
+    "        {\n",
+    "            'Name': 'Packages setup',\n",
+    "            'ScriptBootstrapAction':\n",
+    "                {\n",
+    "                'Path': 's3://johan-spark-scripts/dockerbootstrap.sh'\n",
+    "                }\n",
+    "        }]\n",
     ")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#start ecr session\n",
+    "ecr = session.client('ecr', region_name='us-east-1')\n",
+    "# get login password\n",
+    "password = ecr.get_authorization_token()['authorizationData'][0]['authorizationToken']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#THIS DOESNT WORK BUT DOESNT MATTER WILL USE SSH FOR NOW\n",
+    "#get aws account id\n",
+    "account_id = session.client('sts').get_caller_identity().get('Account')\n",
+    "#CAREFUL DONT EXPOSE THESE \n",
+    "#create public ecr repo, this isnt public\n",
+    "ecr.create_repository(repositoryName='spark-dev', )\n",
+    "#build docker image\n",
+    "os.system(f'docker build -t spark-dev .')\n",
+    "#tag docker image\n",
+    "os.system(f'docker tag spark-dev:latest {account_id}.dkr.ecr.us-east-1.amazonaws.com/spark-dev:latest')\n",
+    "#login to ecr\n",
+    "os.system(f'docker login -u AWS -p {password} https://{account_id}.dkr.ecr.us-east-1.amazonaws.com')\n",
+    "#push docker image to ecr\n",
+    "os.system(f'docker push {account_id}.dkr.ecr.us-east-1.amazonaws.com/spark-dev:latest')"
    ]
   },
   {
