--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com:/home/ec2-user\n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-34-227-60-151.compute-1.amazonaws.com:/home/ec2-user\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-3-82-37-175.compute-1.amazonaws.com\n",
     "\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com\n",
@@ -19,36 +19,9 @@
     "#could put this into bootstrap shell script or smth to transfer the data. Or just upload it directly.\n",
     "\n",
     "#REMEBER TO USE ec2-user instead of root or ubuntu when using ubuntu\n",
-    "\n"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Steps for running something:\n",
-    "-use this jupyer notebook to launch a linux cluster\n",
-    "sudo yum update - y\n",
-    "sudo yum groupinstall \"Development Tools\" -y\n",
-    "sudo yum erase openssl-devel -y\n",
-    "sudo yum install openssl11 openssl11-devel  libffi-devel bzip2-devel wget -y\n",
-    "wget https://www.python.org/ftp/python/3.10.5/Python-3.10.5.tgz\n",
-    "tar -xf Python-3.10.5.tgz\n",
-    "cd Python-3.10.5/\n",
-    "./configure --enable-optimizations\n",
     "\n",
-    "nproc   \n",
-    "then use nproc output for following\n",
-    "make -j $(nproc)\n",
     "\n",
-    "sudo make altinstall\n",
-    "\n",
-    "---------------above is for getting python3.10 to run as a python verison\n",
-    "\n",
-    "pip install virtualenv\n",
-    "py -m virtualenv -p=<your_python_executable> <virtual_environment_directory>\n",
-    "\n"
+    "#so we ssh onto the emr, and then scp our shit over, then built the dockerfile, then run the dockerfile.\n"
    ]
   },
   {
@@ -113,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
