clearences on usuage, update to topics

--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-34-227-60-151.compute-1.amazonaws.com:/home/ec2-user\n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-54-236-23-198.compute-1.amazonaws.com:/home/ec2-user\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-3-82-37-175.compute-1.amazonaws.com\n",
     "\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,35 +104,26 @@
     "                'Name': 'Master nodes',\n",
     "                'Market': 'ON_DEMAND',\n",
     "                'InstanceRole': 'MASTER',\n",
-    "                'InstanceType': 'm4.xlarge',\n",
+    "                'InstanceType': 'm5.4xlarge',\n",
     "                'InstanceCount': 1,\n",
-    "                # 'Configurations': [\n",
-    "                #     {\n",
-    "                #         'Classification': 'docker',\n",
-    "                #         'Properties': {\n",
-    "                #             'docker.trusted.registries': f'local,centos,{dockerami}',\n",
-    "                #             \"docker.privileged-containers.registries\": f\"local,centos,{dockerami}\"\n",
-    "                #         }\n",
-    "                #     }\n",
-    "                #],\n",
     "                'EbsConfiguration': {\n",
     "                    'EbsBlockDeviceConfigs': [\n",
     "                        {\n",
     "                            'VolumeSpecification': {\n",
-    "                                'SizeInGB': 256,\n",
+    "                                'SizeInGB': 128,\n",
     "                                'VolumeType': 'gp2'\n",
     "                            }\n",
     "                        }\n",
     "                    ]\n",
     "                }\n",
-    "              }#,\n",
-    "            # {\n",
-    "            #     'Name': 'worker nodes',\n",
-    "            #     'Market': 'ON_DEMAND',\n",
-    "            #     'InstanceRole': 'CORE',\n",
-    "            #     'InstanceType': 'm5.xlarge',\n",
-    "            #     'InstanceCount': 2,\n",
-    "            # }\n",
+    "              },\n",
+    "            {\n",
+    "                'Name': 'worker nodes',\n",
+    "                'Market': 'ON_DEMAND',\n",
+    "                'InstanceRole': 'CORE',\n",
+    "                'InstanceType': 'm5.xlarge',\n",
+    "                'InstanceCount': 4,\n",
+    "            }\n",
     "        ],\n",
     "        'KeepJobFlowAliveWhenNoSteps': True,\n",
     "        'TerminationProtected': False,\n",
@@ -194,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'JobFlowId': 'j-1EXR6VYRSGRAG', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-1EXR6VYRSGRAG', 'ResponseMetadata': {'RequestId': 'e253437b-fa17-42a1-83b1-6e460e6f0ad3', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'e253437b-fa17-42a1-83b1-6e460e6f0ad3', 'content-type': 'application/x-amz-json-1.1', 'content-length': '118', 'date': 'Mon, 12 Dec 2022 02:31:17 GMT'}, 'RetryAttempts': 0}}\n"
+      "{'JobFlowId': 'j-SW7NP6RJWWY8', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-SW7NP6RJWWY8', 'ResponseMetadata': {'RequestId': 'e19266a8-7288-42cc-896b-c4f752bccc8c', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'e19266a8-7288-42cc-896b-c4f752bccc8c', 'content-type': 'application/x-amz-json-1.1', 'content-length': '116', 'date': 'Tue, 13 Dec 2022 00:55:13 GMT'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
@@ -211,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
