usuage comment for training fin classifier

--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-54-236-23-198.compute-1.amazonaws.com:/home/ec2-user\n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-54-160-236-232.compute-1.amazonaws.com:/home/ec2-user\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-3-82-37-175.compute-1.amazonaws.com\n",
     "\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -r ec2-user@ec2-3-90-179-32.compute-1.amazonaws.com:/home/ec2-user/Python-3.10.5/aws_linux_venv.zip ./ \n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -r ec2-user@ec2-54-160-236-232.compute-1.amazonaws.com:/home/ec2-user/am111_spark/models/ ./ \n",
     "\n",
     "\n",
     "#could put this into bootstrap shell script or smth to transfer the data. Or just upload it directly.\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
