--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-54-160-236-232.compute-1.amazonaws.com:/home/ec2-user\n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-184-72-157-243.compute-1.amazonaws.com:/home/ec2-user\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-3-82-37-175.compute-1.amazonaws.com\n",
     "\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -r ec2-user@ec2-54-160-236-232.compute-1.amazonaws.com:/home/ec2-user/am111_spark/models/ ./ \n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -r ec2-user@ec2-184-72-157-243.compute-1.amazonaws.com:/home/ec2-user/am111_spark/models/ ./ \n",
     "\n",
     "\n",
     "#could put this into bootstrap shell script or smth to transfer the data. Or just upload it directly.\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
     "dockerami = 'TODO'\n",
     "response = emr.run_job_flow(\n",
     "\n",
-    "    Name='docker_spark_aws_linux',\n",
+    "    Name='train_fin_docker',\n",
     "    LogUri='s3://commoncrawl-logs/',\n",
     "    ReleaseLabel='emr-6.9.0',\n",
     "    Instances={\n",
@@ -153,46 +153,12 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#start ecr session\n",
-    "ecr = session.client('ecr', region_name='us-east-1')\n",
-    "# get login password\n",
-    "password = ecr.get_authorization_token()['authorizationData'][0]['authorizationToken']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#THIS DOESNT WORK BUT DOESNT MATTER WILL USE SSH FOR NOW\n",
-    "#get aws account id\n",
-    "account_id = session.client('sts').get_caller_identity().get('Account')\n",
-    "#CAREFUL DONT EXPOSE THESE \n",
-    "#create public ecr repo, this isnt public\n",
-    "ecr.create_repository(repositoryName='spark-dev', )\n",
-    "#build docker image\n",
-    "os.system(f'docker build -t spark-dev .')\n",
-    "#tag docker image\n",
-    "os.system(f'docker tag spark-dev:latest {account_id}.dkr.ecr.us-east-1.amazonaws.com/spark-dev:latest')\n",
-    "#login to ecr\n",
-    "os.system(f'docker login -u AWS -p {password} https://{account_id}.dkr.ecr.us-east-1.amazonaws.com')\n",
-    "#push docker image to ecr\n",
-    "os.system(f'docker push {account_id}.dkr.ecr.us-east-1.amazonaws.com/spark-dev:latest')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'JobFlowId': 'j-SW7NP6RJWWY8', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-SW7NP6RJWWY8', 'ResponseMetadata': {'RequestId': 'e19266a8-7288-42cc-896b-c4f752bccc8c', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'e19266a8-7288-42cc-896b-c4f752bccc8c', 'content-type': 'application/x-amz-json-1.1', 'content-length': '116', 'date': 'Tue, 13 Dec 2022 00:55:13 GMT'}, 'RetryAttempts': 0}}\n"
+      "{'JobFlowId': 'j-2DEYW1GT1NBDX', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-2DEYW1GT1NBDX', 'ResponseMetadata': {'RequestId': 'dda82bd3-b845-43c1-9379-121cf5c5c868', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'dda82bd3-b845-43c1-9379-121cf5c5c868', 'content-type': 'application/x-amz-json-1.1', 'content-length': '118', 'date': 'Tue, 13 Dec 2022 19:15:33 GMT'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
@@ -202,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
