optimized sentiment script

--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -8,12 +8,12 @@
    "source": [
     "\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-184-72-157-243.compute-1.amazonaws.com:/home/ec2-user\n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-3-88-42-221.compute-1.amazonaws.com:/home/ec2-user\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-3-82-37-175.compute-1.amazonaws.com\n",
     "\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -r ec2-user@ec2-184-72-157-243.compute-1.amazonaws.com:/home/ec2-user/am111_spark/models/ ./ \n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -r ec2-user@ec2-184-72-157-243.compute-1.amazonaws.com:/home/ec2-user/am111_spark/models/dl_model_160000_1_1670974311.6058211 ./ \n",
     "\n",
     "\n",
     "#could put this into bootstrap shell script or smth to transfer the data. Or just upload it directly.\n",
@@ -26,19 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
     "import time\n",
     "import os\n",
-    "import paramiko"
+    "import paramiko\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,6 +52,20 @@
     "# create s3 client\n",
     "s3 = session.resource('s3', region_name='us-east-1')\n",
     "# Create a cluster with the default configurations "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_bucket = s3.Bucket('commoncrawl')\n",
+    "warcs = []\n",
+    "for object in my_bucket.objects.filter(Prefix='crawl-data/CC-NEWS/'):\n",
+    "    if object.key.endswith('.warc.gz'):\n",
+    "        warcs.append(object.key)\n",
+    "        "
    ]
   },
   {
@@ -86,16 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#THIS IS MOST IMPORTANT CELL IT LAUNCHES CLUSTERS\n",
     "# Create a cluster with the default configurations \n",
     "dockerami = 'TODO'\n",
     "response = emr.run_job_flow(\n",
     "\n",
-    "    Name='train_fin_docker',\n",
+    "    Name='sentiment_analysios',\n",
     "    LogUri='s3://commoncrawl-logs/',\n",
     "    ReleaseLabel='emr-6.9.0',\n",
     "    Instances={\n",
@@ -119,9 +134,9 @@
     "              },\n",
     "            {\n",
     "                'Name': 'worker nodes',\n",
-    "                'Market': 'ON_DEMAND',\n",
+    "                'Market': 'SPOT',\n",
     "                'InstanceRole': 'CORE',\n",
-    "                'InstanceType': 'm5.xlarge',\n",
+    "                'InstanceType': 'm5.2xlarge',\n",
     "                'InstanceCount': 4,\n",
     "            }\n",
     "        ],\n",
@@ -151,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'JobFlowId': 'j-2DEYW1GT1NBDX', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-2DEYW1GT1NBDX', 'ResponseMetadata': {'RequestId': 'dda82bd3-b845-43c1-9379-121cf5c5c868', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'dda82bd3-b845-43c1-9379-121cf5c5c868', 'content-type': 'application/x-amz-json-1.1', 'content-length': '118', 'date': 'Tue, 13 Dec 2022 19:15:33 GMT'}, 'RetryAttempts': 0}}\n"
+      "{'JobFlowId': 'j-2XGGUQYKCIV7E', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-2XGGUQYKCIV7E', 'ResponseMetadata': {'RequestId': 'ed38de05-7d24-462d-bcce-21da183efd36', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'ed38de05-7d24-462d-bcce-21da183efd36', 'content-type': 'application/x-amz-json-1.1', 'content-length': '118', 'date': 'Thu, 15 Dec 2022 02:47:53 GMT'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
@@ -168,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
