--- a/topic-test.ipynb
+++ b/topic-test.ipynb
@@ -385,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (main, Jun 11 2022, 16:53:24) [GCC 9.4.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
