commets and new grpah

--- a/spak-warc-optim.ipynb
+++ b/spak-warc-optim.ipynb
@@ -682,11 +682,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/johan'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list_of_lists_freach_date[:3]"
+    "import os\n",
+    "os.environ['HOME']"
    ]
   }
  ],
