--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "\n",
     "\n",
-    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-3-88-42-221.compute-1.amazonaws.com:/home/ec2-user\n",
+    "#scp -i \"/home/johan/Johan_key.pem\" -o StrictHostKeyChecking=accept-new -r \"am111_spark\" ec2-user@ec2-54-221-60-110.compute-1.amazonaws.com:/home/ec2-user\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-3-82-37-175.compute-1.amazonaws.com\n",
     "\n",
     "#ssh -i \"Johan_key.pem\" ec2-user@ec2-54-160-226-58.compute-1.amazonaws.com\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
     "                'Name': 'Master nodes',\n",
     "                'Market': 'ON_DEMAND',\n",
     "                'InstanceRole': 'MASTER',\n",
-    "                'InstanceType': 'm5.4xlarge',\n",
+    "                'InstanceType': 'm5.8xlarge',\n",
     "                'InstanceCount': 1,\n",
     "                'EbsConfiguration': {\n",
     "                    'EbsBlockDeviceConfigs': [\n",
@@ -136,8 +136,8 @@
     "                'Name': 'worker nodes',\n",
     "                'Market': 'SPOT',\n",
     "                'InstanceRole': 'CORE',\n",
-    "                'InstanceType': 'm5.2xlarge',\n",
-    "                'InstanceCount': 4,\n",
+    "                'InstanceType': 'c5.4xlarge',\n",
+    "                'InstanceCount': 1,\n",
     "            }\n",
     "        ],\n",
     "        'KeepJobFlowAliveWhenNoSteps': True,\n",
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'JobFlowId': 'j-2XGGUQYKCIV7E', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-2XGGUQYKCIV7E', 'ResponseMetadata': {'RequestId': 'ed38de05-7d24-462d-bcce-21da183efd36', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': 'ed38de05-7d24-462d-bcce-21da183efd36', 'content-type': 'application/x-amz-json-1.1', 'content-length': '118', 'date': 'Thu, 15 Dec 2022 02:47:53 GMT'}, 'RetryAttempts': 0}}\n"
+      "{'JobFlowId': 'j-2ILTBCDXZG4OX', 'ClusterArn': 'arn:aws:elasticmapreduce:us-east-1:012609303642:cluster/j-2ILTBCDXZG4OX', 'ResponseMetadata': {'RequestId': '93d66eb8-08ab-4593-b416-99538ac4c6c8', 'HTTPStatusCode': 200, 'HTTPHeaders': {'x-amzn-requestid': '93d66eb8-08ab-4593-b416-99538ac4c6c8', 'content-type': 'application/x-amz-json-1.1', 'content-length': '118', 'date': 'Thu, 15 Dec 2022 20:44:28 GMT'}, 'RetryAttempts': 0}}\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
