--- a/spark-dev.ipynb
+++ b/spark-dev.ipynb
@@ -25,6 +25,19 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Improvments to make:  make running the script simpler? Perhaps get a single shell script to do everyting? \n",
+    "Use boto3 to upload everything to cluster rather than shell scripting? Can you use boto3 to upload shit to master node? Or store all the scripts on s3, and use boto3 to upload them. \n",
+    "\n",
+    "Also: in spark-long-optim, make one dataframe for all the dates, and a seperate column that is associated with dates. Make a duplicate list of same length as the articles with the chronological dates? (or at least labeled date1, date2, etc).\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -326,7 +339,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "am111_venv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -340,12 +353,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f57737e6d1a902c43fc81f11403a4faf60173bd712443272aa63091abb3c628b"
+    "hash": "1a1af0ee75eeea9e2e1ee996c87e7a2b11a0bebd85af04bb136d915cefc0abce"
    }
   }
  },
